# mine-eye

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GEO_SCRY_FRAMEWORK_CHECKLIST.md  README.md  SCENE3D_MIDDLEWARE_SPEC.md  V1SPEC.md  VISION.md  docker-compose.yml
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: AgentChat.tsx  AoiBboxEditor.tsx  App.tsx  CrsPicker.tsx  GraphCanvas.tsx  GraphErrorBoundary.tsx  GroupEditorOverlay.tsx  LeftSidebar.tsx  Map2DPanel.tsx  Map3DPanel.tsx  Map3DThreePanel.tsx  NodeInspector.tsx  NodeOutputPanel.tsx  NodePreviewPanel.tsx  NodePreviewSnippet.tsx  Scene.tsx  Scene3DTypes.ts  TrajectoryView.tsx  ViewportErrorBoundary.tsx  aoiBounds.ts  crsOptions.ts  csvParse.ts  epsgSearch.ts  graphAddNodes.ts  graphApi.ts  graphInspectorContext.tsx  index.css  leafletRasterLayers.ts  main.tsx  nodeArtifactPreview.ts  nodeGroup.ts  nodeInspectorActions.ts  nodePortLayout.ts  nodeRegistry.ts  nominatim.ts  palettes.ts  pipelineSchema.ts  portTaxonomy.ts  portTypes.ts  projectStorage.ts  (+3 more)
contracts/geology/: geology.formation_catalog.v1.schema.json  geology.formation_orientations.v1.schema.json  geology.interface_points.v1.schema.json  geology.interpolation_constraints.v1.schema.json  geology.lith_block_model.v1.schema.json  geology.lithology_intervals.v1.schema.json  geology.model_domain.v1.schema.json  geology.scalar_field.v1.schema.json  geology.stratigraphic_order.v1.schema.json  geology.stratigraphic_surface.v1.schema.json  geology.stratigraphic_volume_set.v1.schema.json  geology.structural_frame.v1.schema.json
contracts/geophysics/: geophysics.ip_diagnostics.v1.schema.json  geophysics.ip_inversion_input.v1.schema.json  geophysics.ip_inversion_mesh.v1.schema.json  geophysics.ip_inversion_preview.v1.schema.json  geophysics.ip_inversion_result.v1.schema.json  geophysics.ip_mesh.v1.schema.json  geophysics.ip_observations.v1.schema.json  geophysics.ip_pseudosection.v1.schema.json  geophysics.ip_survey.v1.schema.json  report.ip_corridor_model.v1.schema.json  report.ip_inversion.v1.schema.json  report.ip_inversion_input.v1.schema.json  report.ip_inversion_mesh.v1.schema.json  report.ip_inversion_preview.v1.schema.json  report.ip_pseudosection.v1.schema.json  report.ip_qc.v1.schema.json  report.ip_section_slice.v1.schema.json
contracts/scene3d/: README.md  project.settings.v1.schema.json  scene3d.imagery_drape.v1.schema.json  scene3d.layer_stack.v1.schema.json  scene3d.section_plane.v1.schema.json  scene3d.tilebroker_request.v1.schema.json  scene3d.tilebroker_response.v1.schema.json  spatial.aoi.v1.schema.json  terrain.material_stack.v1.schema.json  terrain.surface_grid.v1.schema.json
crates/mine-eye-graph/: Cargo.toml
crates/mine-eye-graph/src/: dag.rs  error.rs  hash.rs  lib.rs
crates/mine-eye-nodes/: Cargo.toml
crates/mine-eye-nodes/src/: crs_transform.rs  error.rs  executor.rs  kinds.rs  lib.rs
crates/mine-eye-nodes/src/kinds/: acquisition.rs  artifact_ingest.rs  chart_plot.rs  colour.rs  data_model.rs  drillhole.rs  electrical_ip.rs  heatmap_raster_tile_cache.rs  imagery_raster.rs  magnetic_depth.rs  magnetic_mapper.rs  magnetic_model.rs  markdown_viewer.rs  mod.rs  node_group.rs  observation_ingest.rs  parse_util.rs  resource_model.rs  runtime.rs  scene_contract.rs  spatial.rs  stratigraphy.rs  stubs.rs  surface.rs  tile_cache.rs  trajectory.rs  visualization.rs
crates/mine-eye-scheduler/: Cargo.toml
crates/mine-eye-scheduler/src/: lib.rs  plan.rs
crates/mine-eye-store/: Cargo.toml
crates/mine-eye-store/migrations/: 20250331000001_init.sql  20250331120000_nodes_last_error.sql  20260401000100_branch_revision_artifact_v1.sql  20260407231000_identity_org_membership_v1.sql  20260408150000_chart_templates_v1.sql  20260410000100_workspace_cache_settings.sql
crates/mine-eye-store/src/: error.rs  jobs.rs  lib.rs  object_store.rs  pg.rs
crates/mine-eye-types/: Cargo.toml
crates/mine-eye-types/src/: branching.rs  crs.rs  domain.rs  envelope.rs  graph_meta.rs  group.rs  identity.rs  lib.rs  lineage.rs  node.rs  policy.rs  ports.rs
docs/: gempy-underground-m1-spec.md  gempy-underground-modelling-roadmap.md  node-operating-matrix.md  node-port-inventory.md  plugin-analytic-implementation-guide.md
docs/ai-memory/: activities-log.md  geology-summary.md  project-context.md  prompting-guide.md  system-prompt-notes.md
docs/ai-skills/: node-workflow-fragments.md  upload-combo-playbooks.md
sample-data/ghana_drill_dataset/: assay.csv  collar.csv  surface_samples.csv  survey.csv
sample-data/ghana_tdip_dataset/: README.md  generate_tdip.py  ghana_tdip_electrodes.csv  ghana_tdip_measurements.csv  ghana_tdip_payload.json  ghana_tdip_truth.json
sample-data/kimberlina_borehole_dataset/: README.md  collar.csv  generate_subset.py  interface_points.csv  kim_ready_subset.csv  lithology_intervals.csv
services/orchestrator/: Cargo.toml
services/orchestrator/src/: ai_chat.rs  ingest_synth.rs  main.rs  node-registry.json  registry.rs  viewer_manifest.rs
services/worker/: Cargo.toml
services/worker/src/: main.rs
