[workspace]
resolver = "2"
members = [
    "crates/mine-eye-types",
    "crates/mine-eye-graph",
    "crates/mine-eye-scheduler",
    "crates/mine-eye-nodes",
    "crates/mine-eye-store",
    "services/orchestrator",
    "services/worker",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
sha2 = "0.10"
hex = "0.4"
petgraph = "0.7"
anyhow = "1.0"
dotenvy = "0.15"
