[package]
name = "mine-eye-nodes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "V1 node executors: ingest, desurvey, DEM stub, block model stub"

[dependencies]
mine-eye-types = { path = "../mine-eye-types" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
proj = { version = "0.31.0", default-features = false, features = ["bundled_proj"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
