[package]
name = "mine-eye-scheduler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Topological scheduling, staleness, and job fan-out for mine-eye"

[dependencies]
mine-eye-types = { path = "../mine-eye-types" }
mine-eye-graph = { path = "../mine-eye-graph" }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
