[package]
name = "mine-eye-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "mine-eye-orchestrator"
path = "src/main.rs"

[dependencies]
mine-eye-types = { path = "../../crates/mine-eye-types" }
mine-eye-graph = { path = "../../crates/mine-eye-graph" }
mine-eye-scheduler = { path = "../../crates/mine-eye-scheduler" }
mine-eye-store = { path = "../../crates/mine-eye-store" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3"
base64 = "0.22"
urlencoding = "2.1"
async-stream = "0.3"
futures-core = "0.3"
dotenvy = { workspace = true }
