[package]
name = "mine-eye-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "mine-eye-worker"
path = "src/main.rs"

[dependencies]
mine-eye-types = { path = "../../crates/mine-eye-types" }
mine-eye-nodes = { path = "../../crates/mine-eye-nodes" }
mine-eye-store = { path = "../../crates/mine-eye-store" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
